Removes tooltip modals & popovers styles (replaced at _configura.scss)

--- a/assets/css/source/_reset.scss
+++ b/assets/css/source/_reset.scss
@@ -20,15 +20,10 @@ html{
             }
         }
 
-        &.modal-open{
-            overflow: visible;  // don't remove page scroll when modal is open
-            padding-right: 0 !important;
+        *:focus{
+            outline-width: 0px;
         }
 
-        // Swatch Popovers
-        .popover{
-            @extend %tooltip-popover; // re-styles Bootstrap popovers 
-        }
     }
 
 }
