--- a/assets/css/source/_configura.scss
+++ b/assets/css/source/_configura.scss
@@ -1,6 +1,6 @@
 #config{
 
-    // General
+    //// General
 
     section:not(.container){
         padding-top: 80px;
@@ -25,7 +25,7 @@
         @extend %tooltip-popover; // re-styles Bootstrap popovers 
     }
 
-    // End General
+    //// End General
 
     #cotas{
 
@@ -480,7 +480,6 @@
     
             }
             
-
         }
 
         .btn-wrapper{
