--- a/assets/css/source/_navbar.scss
+++ b/assets/css/source/_navbar.scss
@@ -2,7 +2,7 @@
     position: fixed;
     width: 100%;
     top: 0;
-    z-index: 1065; // override modals
+    z-index: 1065; // overlap modals
     height: 60px;
     background-color: black;
 
