Extends table rows border-bottom to horizontal scrolled space @ mobile size

--- a/assets/css/source/_configura.scss
+++ b/assets/css/source/_configura.scss
@@ -249,6 +249,10 @@
 
     #models-table{
 
+        .border-bottom{ // Bootstrap class
+            padding-bottom: 45px; // adds property
+        }
+
         @include phone-only{
             overflow-x: scroll;
         }
