--- a/assets/css/source/_variables.scss
+++ b/assets/css/source/_variables.scss
@@ -12,7 +12,7 @@ $tiny: .7rem;
 $yellow: #F8D000;
 $grey: #AFADAD;
 $beakpink: #FAD0C5;
-$beakblue: #99BCCE; // Beaktor blue
+$beakblue: #99BCCE;
 $beakflesh: #FFE7AC;
 $beakgreen: #C0E0CD;
 $bootsblack: #212529; // Bootstrap black
