Solves pseudo-element misplacent issue @ Firefox

--- a/assets/css/source/_components.scss
+++ b/assets/css/source/_components.scss
@@ -43,7 +43,7 @@
 
 %dropdown-icon{
     content: url(../../img/vec/boton_mas_activo.svg);
-    display: inline-flex;
+    display: block;
     width: 20px;
     position: absolute;
     top: -5px;
