--- a/assets/css/source/_footer.scss
+++ b/assets/css/source/_footer.scss
@@ -28,7 +28,7 @@ footer{
             margin-block-end: 0;
         }
     
-        .back-up{
+        #scroll-up img{
             width: 30px;
             filter: brightness(10);
         }
@@ -74,23 +74,26 @@ footer{
         .footer-legal{
             padding-top: 40px;
 
-            .col-8{
-                flex-wrap: wrap;
+            .col-md-6{
+                @include tablet-portrait-down{
+                    margin-bottom: 1rem;
+                }
+
+                a{
+                    text-align: center;
+                    text-decoration: underline;
+                    padding-right: 2.5rem;
+    
+                    @include tablet-portrait-to-desktop {
+                        padding-right: 1rem;
+                    }
+    
+                    @include tablet-portrait-down{
+                        padding-right: .5rem;
+                    }
+                }
             }
             
-            a{
-                text-decoration: underline;
-                padding-right: 2.5rem;
-
-                @include tablet-portrait-to-desktop {
-                    padding-right: 1rem;
-                }
-
-                @include tablet-portrait-down{
-                    padding-right: .5rem;
-                }
-            }
-        
         }
     }
   
