--- a/assets/css/source/_base.scss
+++ b/assets/css/source/_base.scss
@@ -78,11 +78,21 @@
 
 #blog-index{
 
-    section, div{
+    /* section, div{
         border: 1px solid firebrick;
+    } */
+
+    .container{
+        padding-top: 100px;
     }
 
     .hero{
+
+        .hero-description{
+            font-size: 1.5rem;
+            color: $grey;
+            margin-bottom: 1.5rem;
+        }
 
         .social{ // create component!
             padding: 0;
@@ -95,7 +105,7 @@
                 }
     
                 img{
-                    width: 30px;
+                    width: 25px;
                     mix-blend-mode: exclusion;
 
                     @include tablet-landscape-down{
@@ -108,37 +118,200 @@
         }
     }
 
-    #follow-us{
+    .mini-module{
+        padding-bottom: 20px;
+        border-bottom: 1px solid $grey;
+        margin-bottom: 20px;
 
-        .social-icons{ // create component!
-            padding: 0;
-            flex-wrap: wrap;
-    
-            .social-icon{
-                padding: {
-                    top: 10px;
-                    right: 0.5rem;
-                }
-    
-                img{
-                    width: 30px;
-                    mix-blend-mode: exclusion;
+    }
 
-                    @include tablet-landscape-down{
-                        width: 20px;
-                    }
-                }
+    .module-title{
+        font-size: 1.5rem;
+        font-weight: bold;
+        padding-bottom: 1rem;
+        margin-bottom: 1.25rem;
+        border-bottom: 2px solid #46454a;
+    }
+
+    .slide-text{
+        bottom: 0;
+        padding: .5rem 2rem;
+        background-color: rgba(0, 0, 0, .5);
+
+        .main-post-title{
+            font-size: 1.7rem;
+            color: white;
+        }
+
+        .main-post-meta{
+            color: white;
+        }
+    }
+
+    .post-text{
+        padding-top: 25px;
+    }
+
+    .post-title{
+        font-size: 1rem;
+        line-height: 1.1rem;
+        font-weight: bold;
+        &.border-bottom{
+            padding-bottom: 25px;
+            border-color: black !important;
+            margin-bottom: 16px;
+        }
+    }
+
+    .post-author{
+        font-size: .8rem; // post-meta > * common
+        margin-bottom: 0; // post-meta > * common
+        text-transform: uppercase;
+        
+    }
+
+    .post-date-pub{
+        font-size: .8rem; // post-meta > * common
+        margin-bottom: 0; // post-meta > * common
+        color: $grey;
+        text-align: right;
+        &.after-icon::after{
+            content: url(../../img/read-more-icon.png);
+            padding-left: .7rem;
+        }
+    }
+
+    .read-more,
+    .tag{
+            font-size: .9rem;
+            color: grey;
+            text-decoration: underline;
+        }
+
     
+    #posts-index{
+
+        .highlighted-posts > .row{
+            margin-bottom: 50px;
+        }
+
+        .other-posts{
+
+            .text-wrapper{
+                padding-left: 1.5rem;
             }
         }
     }
+
+    #sidebar{
+        flex: 0 0 28.35%;
+        max-width: 30%;
+
+        > .row{
+            margin-bottom: 50px;
+        }
+
+        #about-us{
+
+            p{
+                font-size: .9rem;
+                line-height: 1.1rem;
+            }
+        }
+
+        #follow-us{
+
+            .social-icons{ // create component!
+                padding: 0;
+                flex-wrap: wrap;
+                // own properties
+                display: flex;
+                justify-content: flex-end;
+                align-items: flex-start; 
+
+        
+                .social-icon{
+                    display: flex; // own property
+                    padding: {
+                        //top: 10px; // own property
+                        right: 0.5rem;
+                    }
+        
+                    img{
+                        //width: 30px;
+                        width: 15px; // own size
+                        mix-blend-mode: exclusion;
+    
+                        @include tablet-landscape-down{
+                            width: 20px;
+                        }
+                    }
+        
+                }
+            }
+        }
+
+        #sidebar-posts{
+
+            .nav-tab{
+                font-size: 1rem;
+                font-weight: initial;
+                color: $grey;
+        
+                a{
+                    padding-left: 0;
+                    &.active{
+                        font-weight: bold;
+                        color: black;
+                    }
+    
+                }
+            }
+            
+            .nav-tabs,
+            .nav-link{
+                border-color: transparent;
+            }
+
+            .tab-pane > .sidebar-post:first-child{
+                padding-top: 1.25rem;
+                border-top: 2px solid #46454a;
+            }
+
+            .sidebar-post{
+
+                .text-wrapper{
+                    padding: 0;
+                }
+            }
+        }
+
+        #tags{
+
+            .module-title::after{
+                content: url(../../img/tag-icon.png);
+                display: inline-block;
+                position: absolute;
+                right: 0;
+            }
+        }
+
+
+        
+    }
+
+
 }
 
 /* unused (but just-in-case) classes --> remove?
 
 .blog-module
+.tecnico.emocional.espacial etc.
 
+.*-wrapper
+.slide-img
 
+.sidebar-post / .mini-module
 */
 
 
