--- a/assets/css/source/_base.scss
+++ b/assets/css/source/_base.scss
@@ -78,9 +78,9 @@
 
 #blog-index{
 
-    /* section, div{
+    section, div{
         border: 1px solid firebrick;
-    } */
+    }
 
     .container{
         padding-top: 100px;
@@ -164,14 +164,14 @@
     }
 
     .post-author{
-        font-size: .8rem; // post-meta > * common
+        font-size: .7rem; // post-meta > * common
         margin-bottom: 0; // post-meta > * common
         text-transform: uppercase;
         
     }
 
     .post-date-pub{
-        font-size: .8rem; // post-meta > * common
+        font-size: .7rem; // post-meta > * common
         margin-bottom: 0; // post-meta > * common
         color: $grey;
         text-align: right;
@@ -195,17 +195,35 @@
             margin-bottom: 50px;
         }
 
+        .flat-pic{
+            max-height: 260px;
+            object-fit: cover;
+        }
+
         .other-posts{
 
             .text-wrapper{
                 padding-left: 1.5rem;
             }
         }
+
+        .other-posts{
+
+            @include tablet-landscape-down{
+                
+                img{
+                    width: 100%;
+                }
+            }
+        }
     }
 
     #sidebar{
-        flex: 0 0 28.35%;
-        max-width: 30%;
+
+        @include tablet-landscape-up{
+            flex: 0 0 28.35%;
+            max-width: 30%;
+        }
 
         > .row{
             margin-bottom: 50px;
@@ -242,9 +260,9 @@
                         width: 15px; // own size
                         mix-blend-mode: exclusion;
     
-                        @include tablet-landscape-down{
-                            width: 20px;
-                        }
+                        /* @include tablet-landscape-down{
+                            width: 10px;
+                        } */
                     }
         
                 }
@@ -280,9 +298,20 @@
 
             .sidebar-post{
 
-                .text-wrapper{
-                    padding: 0;
+                .img-wrapper{
+                    padding-right: 0;
                 }
+
+                @include tablet-landscape-down{
+                    
+                    img{
+                        width: 100%;
+                    }
+                }
+
+                /* .text-wrapper{
+                    padding: 0;
+                } */
             }
         }
 
