--- a/assets/css/source/_base.scss
+++ b/assets/css/source/_base.scss
@@ -78,9 +78,9 @@
 
 #blog-index{
 
-    section, div{
+    /* section, div{
         border: 1px solid firebrick;
-    }
+    } */
 
     .container{
         padding-top: 100px;
@@ -167,6 +167,8 @@
         font-size: .7rem; // post-meta > * common
         margin-bottom: 0; // post-meta > * common
         text-transform: uppercase;
+        align-self: flex-end; // only for ::after-icon
+    
         
     }
 
@@ -192,12 +194,22 @@
     #posts-index{
 
         .highlighted-posts > .row{
-            margin-bottom: 50px;
+            margin-bottom: 2.5rem;
+
+            @include tablet-portrait-down{
+
+                .right-module{
+                    padding-top: 1.5rem;
+                }
+            }
         }
 
-        .flat-pic{
-            max-height: 260px;
-            object-fit: cover;
+        .flat-module{
+
+            img{
+                max-height: 260px;
+                object-fit: cover;
+            }
         }
 
         .other-posts{
@@ -205,15 +217,17 @@
             .text-wrapper{
                 padding-left: 1.5rem;
             }
-        }
-
-        .other-posts{
 
             @include tablet-landscape-down{
+
+                .img-wrapper{
+                    padding-right: 0;
+
+                    img{
+                        width: 100%;
+                    }
+                }  
                 
-                img{
-                    width: 100%;
-                }
             }
         }
     }
@@ -223,6 +237,10 @@
         @include tablet-landscape-up{
             flex: 0 0 28.35%;
             max-width: 30%;
+        }
+
+        @include tablet-portrait-down{
+            padding-top: 2.5rem;
         }
 
         > .row{
@@ -309,9 +327,6 @@
                     }
                 }
 
-                /* .text-wrapper{
-                    padding: 0;
-                } */
             }
         }
 
