Adds line-height property to hero-title component

--- a/assets/css/source/_components.scss
+++ b/assets/css/source/_components.scss
@@ -24,6 +24,7 @@
     &.downfont{
         font-size: $big;
     }
+    line-height: 1;
     bottom: 40px;
     &.long-text{
         @include tablet-portrait-down{
