--- a/assets/css/source/_base.scss
+++ b/assets/css/source/_base.scss
@@ -74,7 +74,7 @@
     }
 }
 
-/*---------- BLOG ---------- */ // OWn _partial!!
+/*---------- BLOG ---------- */ // Own _partial!!
 
 #blog-index{
 
@@ -119,9 +119,11 @@
     }
 
     .mini-module{
-        padding-bottom: 20px;
-        border-bottom: 1px solid $grey;
         margin-bottom: 20px;
+        &.border-bottom{ // all are .border-bottom (join?)
+            padding-bottom: 20px;
+            border-bottom: 1px solid $grey !important;
+        }
 
     }
 
