--- a/assets/css/source/_base.scss
+++ b/assets/css/source/_base.scss
@@ -220,6 +220,45 @@
             }
         }
 
+        .owl-carousel,
+        .owl-stage-outer{
+            max-height: 450px;
+
+            .owl-item.active{
+                width: unset !important; // temporary fix (for last fixes?) 
+            }
+
+            .owl-nav{
+                position: absolute;
+                top: 50%;
+                width: 100%;
+                margin-top: 0 !important;
+                display: flex;
+                justify-content: space-between;
+
+                .owl-prev{
+                    transform: scale(3);
+                    filter: brightness(10);
+                    padding-left: .5rem !important;    
+                }
+
+                .owl-next{
+                    transform: scale(3);
+                    filter: brightness(10);
+                    padding-right: .5rem !important;
+                }
+
+            }
+
+            .owl-dots{
+                position: absolute;
+                top: 25px;
+                width: 100%;
+
+            }
+
+        }
+
         .flat-module{
 
             img{
